# workbench

./: .features.json  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pull_request_template.md  third-party-programs.txt  workbench.py
.github/workflows/: check-pr-name.yml  update-pr-branch.yml
automation/Jenkins/: nightly_test_config.yml  openvino_version.yml  precommit_test_config.yml  python_starter_version.yml
automation/bom/: copy_by_bom.sh  image_BOM.txt  openvino_notebooks_BOM.txt  package_BOM.txt
client/: .browserslistrc  .dockerignore  .eslintrc.json  CONTRIBUTING.md  README.md  angular.json  bom_test.py  extra-webpack.config.ts  karma.conf.js  npm_audit_test.py  package-lock.json  package.json  tsconfig.json  tslint.json
config/: constants.py  utils.py
docker/: docker-compose.bootstrap.yml  docker-compose.local.yml  docker-compose.test.bootstrap.yml  docker-compose.yml  docker_python_lgpl.txt  third_party_programs.txt
migrations/: README.md  env.py  migration.py  migrations_test.py  script.py.mako
nginx/: dl-workbench-ssl.com  dl-workbench.com  mac.nginx.conf  nginx.conf  security-ssl.conf  security.conf
requirements/: datumaro.txt  requirements.txt  requirements_bootstrap.txt  requirements_dev.txt  requirements_jupyter.txt  requirements_snyk.txt
tests/: bom_test.py
tests/deployment_tests/ie_sample/: CMakeLists.txt  main.cpp
tutorials/: intro.md
tutorials/sample_application/: CMakeLists.txt  main.cpp  requirements.txt  tutorial_sample_application.ipynb
wb/: __init__.py  flask_test.py
(+2179 files in other folders)
